[gd_scene load_steps=36 format=3 uid="uid://i08ohtan6f7y"]

[ext_resource type="Texture2D" uid="uid://niuxkr17lt4a" path="res://assets/enemies/blud/attack01.png" id="1_gjuvj"]
[ext_resource type="Script" path="res://resources/characters/enemies/blud/blud.gd" id="1_srbq5"]
[ext_resource type="Texture2D" uid="uid://tbf0julim8ud" path="res://assets/enemies/blud/attack02.png" id="2_2gfls"]
[ext_resource type="Texture2D" uid="uid://dalrq6o1ofsc2" path="res://assets/enemies/blud/attack03.png" id="3_f44d5"]
[ext_resource type="Texture2D" uid="uid://uqwy1wg4y8uo" path="res://assets/enemies/blud/attack04.png" id="4_jljxi"]
[ext_resource type="Texture2D" uid="uid://cmmdrkl3cotx5" path="res://assets/enemies/blud/attack05.png" id="5_egeph"]
[ext_resource type="Texture2D" uid="uid://dbjo7qdltfbvv" path="res://assets/enemies/blud/attack06.png" id="6_68cm4"]
[ext_resource type="Texture2D" uid="uid://flusngwttbfm" path="res://assets/enemies/blud/attack07.png" id="7_qu1ye"]
[ext_resource type="Texture2D" uid="uid://ohlx15q1sul" path="res://assets/enemies/blud/attack08.png" id="8_vlt75"]
[ext_resource type="Texture2D" uid="uid://d3x72h1cfmd41" path="res://assets/enemies/blud/idle01.png" id="9_pxnyt"]
[ext_resource type="Texture2D" uid="uid://b3sdjawsvleah" path="res://assets/enemies/blud/idle02.png" id="10_6icqg"]
[ext_resource type="Texture2D" uid="uid://dibv2tolcvrh4" path="res://assets/enemies/blud/idle03.png" id="11_f72kq"]
[ext_resource type="Texture2D" uid="uid://xqlh0l1urgx" path="res://assets/enemies/blud/idle04.png" id="12_u6x5w"]
[ext_resource type="Texture2D" uid="uid://cvgod17tv3n1l" path="res://assets/enemies/blud/idle05.png" id="13_a3amk"]
[ext_resource type="Texture2D" uid="uid://cv7sqi7ddaxcu" path="res://assets/enemies/blud/idle06.png" id="14_k3kt6"]
[ext_resource type="Texture2D" uid="uid://crtv5dxei40kg" path="res://assets/enemies/blud/idle07.png" id="15_8guxy"]
[ext_resource type="Texture2D" uid="uid://drvqw8kjiitef" path="res://assets/enemies/blud/idle08.png" id="16_jptak"]
[ext_resource type="Texture2D" uid="uid://cn2kxw8u8gksd" path="res://assets/enemies/blud/idle09.png" id="17_vhkl6"]
[ext_resource type="Texture2D" uid="uid://djx7ierrr11d1" path="res://assets/enemies/blud/idle10.png" id="18_f0gnw"]
[ext_resource type="Texture2D" uid="uid://qyuxspo4bm54" path="res://assets/enemies/blud/idle11.png" id="19_ovh55"]
[ext_resource type="Texture2D" uid="uid://cq7y7gke0ic57" path="res://assets/enemies/blud/walk01.png" id="20_wjget"]
[ext_resource type="Texture2D" uid="uid://b21tjas5qxehy" path="res://assets/enemies/blud/walk02.png" id="21_gw6rj"]
[ext_resource type="Texture2D" uid="uid://c8jsfdx7wlx88" path="res://assets/enemies/blud/walk03.png" id="22_td03h"]
[ext_resource type="Texture2D" uid="uid://dbx36fhp4wlem" path="res://assets/enemies/blud/walk04.png" id="23_sryvm"]
[ext_resource type="Texture2D" uid="uid://bqb6rfa4sdany" path="res://assets/enemies/blud/walk05.png" id="24_7mxtu"]
[ext_resource type="Texture2D" uid="uid://ieb4g52mwv1q" path="res://assets/enemies/blud/walk06.png" id="25_wpmv3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_an76u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_gjuvj")
}, {
"duration": 1.0,
"texture": ExtResource("2_2gfls")
}, {
"duration": 1.0,
"texture": ExtResource("3_f44d5")
}, {
"duration": 1.0,
"texture": ExtResource("4_jljxi")
}, {
"duration": 1.0,
"texture": ExtResource("5_egeph")
}, {
"duration": 1.0,
"texture": ExtResource("6_68cm4")
}, {
"duration": 1.0,
"texture": ExtResource("7_qu1ye")
}, {
"duration": 1.0,
"texture": ExtResource("8_vlt75")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_pxnyt")
}, {
"duration": 1.0,
"texture": ExtResource("10_6icqg")
}, {
"duration": 1.0,
"texture": ExtResource("11_f72kq")
}, {
"duration": 1.0,
"texture": ExtResource("12_u6x5w")
}, {
"duration": 1.0,
"texture": ExtResource("13_a3amk")
}, {
"duration": 1.0,
"texture": ExtResource("14_k3kt6")
}, {
"duration": 1.0,
"texture": ExtResource("15_8guxy")
}, {
"duration": 1.0,
"texture": ExtResource("16_jptak")
}, {
"duration": 1.0,
"texture": ExtResource("17_vhkl6")
}, {
"duration": 1.0,
"texture": ExtResource("18_f0gnw")
}, {
"duration": 1.0,
"texture": ExtResource("19_ovh55")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_wjget")
}, {
"duration": 1.0,
"texture": ExtResource("21_gw6rj")
}, {
"duration": 1.0,
"texture": ExtResource("22_td03h")
}, {
"duration": 1.0,
"texture": ExtResource("23_sryvm")
}, {
"duration": 1.0,
"texture": ExtResource("24_7mxtu")
}, {
"duration": 1.0,
"texture": ExtResource("25_wpmv3")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_syl8j"]
radius = 7.0
height = 20.0

[sub_resource type="Animation" id="Animation_budaa"]
resource_name = "idle"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_246jw"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_a1b7m"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DemageBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_finished"
}]
}

[sub_resource type="Animation" id="Animation_qsdth"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DemageBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kjvxs"]
_data = {
"RESET": SubResource("Animation_qsdth"),
"attack": SubResource("Animation_a1b7m"),
"idle": SubResource("Animation_budaa"),
"run": SubResource("Animation_246jw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wnvb7"]
size = Vector2(8, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2y3w"]
size = Vector2(12, 20)

[node name="Blud" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_srbq5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -16)
sprite_frames = SubResource("SpriteFrames_an76u")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("CapsuleShape2D_syl8j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kjvxs")
}

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="PlayerDetect" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
position = Vector2(12, -10)
shape = SubResource("RectangleShape2D_wnvb7")

[node name="DemageBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DemageBox"]
position = Vector2(12, -12)
shape = SubResource("RectangleShape2D_d2y3w")

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="DemageBox" to="." method="_on_demage_box_body_exited"]
